; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_diff_helpers.c_diff_print_file_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_diff_helpers.c_diff_print_file_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@stderr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @diff_print_file_cb(i32* %0, float %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca float, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store float %1, float* %6, align 4
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* @stderr, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load float, float* %6, align 4
  %14 = call i32 @fprintf_delta(i32 %11, i32* %12, float %13)
  store i32 0, i32* %4, align 4
  br label %31

15:                                               ; preds = %3
  %16 = load i8*, i8** %7, align 8
  %17 = bitcast i8* %16 to %struct.TYPE_2__*
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %26, label %21

21:                                               ; preds = %15
  %22 = load i32, i32* @stderr, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = load float, float* %6, align 4
  %25 = call i32 @fprintf_delta(i32 %22, i32* %23, float %24)
  br label %26

26:                                               ; preds = %21, %15
  %27 = load i32*, i32** %5, align 8
  %28 = load float, float* %6, align 4
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 @diff_file_cb(i32* %27, float %28, i8* %29)
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %26, %10
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @fprintf_delta(i32, i32*, float) #1

declare dso_local i32 @diff_file_cb(i32*, float, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
